--- a/ExampleAPI/ExampleAPI.csproj
+++ b/ExampleAPI/ExampleAPI.csproj
@@ -1,12 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	  <SpaRoot>ClientApp\</SpaRoot>
+	  <!--<SpaProxyServerUrl>http://localhost:44466</SpaProxyServerUrl>-->
+	  <!--<SpaProxyLaunchCommand>npm start</SpaProxyLaunchCommand>-->
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices" Version="3.1.27" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
